Eliminate IDE warnings